Remove z-index from buttons to avoid conflict with calendar

--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -54,7 +54,6 @@
 %hui-input-base {
   float: left;
   position: relative;
-  z-index: 1;
   text-align: left;
   font-family: $hui-font-family;
 }
